# contracts-parachain-template

./: Cargo.toml  README.md
chainspecs/: chainSpec.json  chainSpecRaw.json  parachain-template-genesis  parachain-template-wasm
contracts/erc20/: Cargo.toml
contracts/erc721/: Cargo.toml
contracts/flipper/: Cargo.toml
node/: Cargo.toml
node/src/: rpc.rs  service.rs
pallets/contracts/: Cargo.toml
pallets/contracts/common/: Cargo.toml
pallets/contracts/rpc/: Cargo.toml
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
