[package]
name = "flipper"
version = "3.0.2"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
publish = false

[dependencies]
ink_primitives = { git = "https://github.com/paritytech/ink", default-features = false, branch = "ag-3.0.1-fixes" }
ink_metadata = { git = "https://github.com/paritytech/ink", default-features = false, branch = "ag-3.0.1-fixes", features = ["derive"], optional = true }
ink_env = { git = "https://github.com/paritytech/ink", default-features = false, branch = "ag-3.0.1-fixes" }
ink_storage = { git = "https://github.com/paritytech/ink", default-features = false, branch = "ag-3.0.1-fixes" }
ink_lang = { git = "https://github.com/paritytech/ink", default-features = false, branch = "ag-3.0.1-fixes" }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

[lib]
name = "flipper"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
